# herbstluftwm

./: .clang-tidy  .codecov.yml  .gitignore  .hlwm.imp  .mailmap  .mergify.yml  .travis.yml  AUTHORS  BUGS  CMakeLists.txt  Dockerfile.ci-disco  Dockerfile.ci-trusty  Dockerfile.iwyu  Doxyfile  HACKING  INSTALL  LICENSE  MIGRATION  Makefile  NEWS  PKGBUILD  README  README.asciidoc  README.md  ci-build.py  ci-build.sh  ci-check-using-std.sh  colors.mk  config.mk  iwyu.sh  release.sh  rules.mk  tox.ini  valgrind-xephyr.sh  valigrind-xephyr.sh  version.mk  winterbreeze.asciidoc
.github/workflows/: hlwm.yml  publish-ghcr.yml
ci/: Dockerfile.ci-disco  Dockerfile.ci-eoan  Dockerfile.ci-focal  Dockerfile.ci-jammy  Dockerfile.ci-trusty  build.py  check-using-std.sh  clang++-and-tidy.sh  clang-and-tidy.sh  diff-json-doc.py  lsan-suppressions.txt  mktar.sh
cmake/: behavior.cmake  ccache.cmake  debugflags.cmake  dependencies.cmake  gitversion.cmake  version.cmake
doc/: CMakeLists.txt  format-doc.py  gendoc.py  herbstclient.txt  herbstluftwm-tutorial.txt  herbstluftwm.txt  literal2emph.xsl  patch-manpage-xml.py
ipc-client/: CMakeLists.txt  Makefile  client-utils.c  client-utils.h  ipc-client.c  ipc-client.h  main.c
python/: README.md  setup.py
python/herbstluftwm/: __init__.py  example.py  types.py
scripts/: README  dmenu.sh  dumpbeatify.sh  dumpbeautify.sh  exec_on_tag.sh  execwith.sh  float-maximize.sh  floatmon.sh  herbstcommander.sh  keychain.sh  lasttag.sh  layout.sh  loadstate.sh  maximize.sh  perclient_kb_layout.sh  q3terminal.sh  savestate.sh  scratchpad.sh  toggledualhead.sh  unminimize.sh  windowmenu.sh  wselect.sh
share/: CMakeLists.txt  _herbstclient  autostart  dmenu_run_hlwm  herbstclient-completion  herbstclient.fish  herbstluftrc  herbstluftwm.desktop  herbstluftwm.xpm  panel.sh  restartpanels.sh
src/: CMakeLists.txt  arglist.cpp  arglist.h  argparse.cpp  argparse.h  attribute.cpp  attribute.h  attribute_.h  autostart.cpp  autostart.h  boxstyle.cpp  boxstyle.h  byname.cpp  byname.h  child.h  childbyindex.cpp  childbyindex.h  client.cpp  client.h  clientlist.c  clientlist.cpp  clientlist.h  clientmanager.cpp  clientmanager.h  clientobject.cpp  clientobject.h  command.c  command.cpp  command.h  commandio.cpp  commandio.h  completion.cpp  completion.h  converter.cpp  converter.h  css.cpp  css.h  cssname.cpp  cssname.h  decoration.c  (+152 more)
tests/: conftest.py  test_autostart.py  test_basic_events.py  test_clients.py  test_completion.py  test_css.py  test_decorations.py  test_doc.py  test_ewmh.py  test_floating.py  test_frame_decorations.py  test_global_commands.py  test_herbstclient.py  test_herbstluftwm.py  test_hook.py  test_keybind.py  test_layout.py  test_load.py  test_max_tab_reorder.py  test_meta_commands.py  test_monitor.py  test_monitor_detection.py  test_mousebind.py  test_panels.py  test_python_binds.py  test_root_commands.py  test_rules.py  test_settings.py  test_smoke.py  test_spawn.py  test_stack.py  test_tags.py  test_theme.py  test_types.py  test_watchers.py  test_x11.py
themes/: separate-tabs.css  white-red-tabs.css  white-tabs.css
utilities/: .gitignore  Makefile  README  XFetchName.c
www/: .gitignore  .htaccess  Makefile  compose.py  compose.sh  contrib.txt  download.txt  faq.txt  footer.txt  gentoc.sh  header.txt  herbstclient.txt  herbstluftwm.txt  imprint.txt  index.html  index.txt  install.sh  main.css  migration.txt  news.txt  object-doc.py  object-doc.txt  tour.txt
